--- a/resumebuilder/template/HFN/footer.html
+++ b/resumebuilder/template/HFN/footer.html
@@ -1,5 +1,21 @@
-
 {% load static %}
+<footer>
+    <section>
+        <p>© 2024 Click Embellish |
+            <a href="/privacy-policy">Privacy Policy</a> |
+            <a href="/terms-of-service">Terms of Service</a> |
+            <a href="/contact">Contact Us</a>
+        </p>
+        <p>Build your career with our resume builder. Create a professional resume in minutes, tailored to highlight
+            your skills and achievements.</p>
+            <p>Follow Us:
+                <a href="https://facebook.com" target="_blank" class="social-icon facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://twitter.com" target="_blank" class="social-icon twitter"><i class="fab fa-twitter"></i></a>
+                <a href="https://linkedin.com" target="_blank" class="social-icon linkedin"><i class="fab fa-linkedin-in"></i></a>
+            </p>
+            
+    </section>
+</footer>
 
 
 
