--- a/resumebuilder/static/css/cv/styles.css
+++ b/resumebuilder/static/css/cv/styles.css
@@ -162,6 +162,21 @@ footer {
     color: #777;
 }
 
+#download-btn {
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    margin-top: 20px;
+    display: inline-block;
+}
+
+#download-btn:hover {
+    background-color: #0056b3;
+}
+
+
 /* Media Query for responsiveness */
 @media screen and (max-width: 768px) {
     .cv {
@@ -177,5 +192,26 @@ footer {
 
     .profile img {
         margin: 0 auto 10px auto;
+    }
+}
+
+@media print {
+    body {
+        font-size: 8px; /* Reduce font size more */
+        margin: 0; /* Reduce margins */
+    }
+
+    .cv {
+        width: 100%;
+        padding: 0; /* Remove padding */
+        margin: 0; /* Remove margins */
+    }
+
+    .cv h2, .cv h3 {
+        font-size: 10px; /* Further reduce header sizes */
+    }
+
+    .cv p, .cv li {
+        font-size: 8px; /* Reduce paragraph and list font size */
     }
 }
