--- a/resumebuilder/template/resume_data/award.html
+++ b/resumebuilder/template/resume_data/award.html
@@ -26,13 +26,13 @@
                     <form action="" method="post" target="_blank" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="inputs">
-                            <div class="label_input">
+                            <div class="form-group">
                                 <label for="awards_name">Awards Name</label>
-                                <input type="text" name="awards_name" id="awards_name" placeholder="Certificate NAme">
+                                <input type="text" class="form-control" name="awards_name" id="awards_name" placeholder="Certificate NAme">
                             </div>
-                            <div class="label_input">
+                            <div class="form-group">
                                 <label for="details">Details</label>
-                                <input type="text" name="details" id="details" placeholder="Enter Details">
+                                <input type="text" class="form-control" name="details" id="details" placeholder="Enter Details">
                             </div>
 
 
