--- a/resumebuilder/template/resume_data/certificate.html
+++ b/resumebuilder/template/resume_data/certificate.html
@@ -27,13 +27,13 @@
                     <form action="" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="inputs">
-                            <div class="label_input">
+                            <div class="form-group">
                                 <label for="certificate_name">Certificate Name</label>
-                                <input type="text" name="certificate_name" id="certificate_name" placeholder="Certificate NAme">
+                                <input type="text" class="form-control" name="certificate_name" id="certificate_name" placeholder="Certificate NAme">
                             </div>
-                            <div class="label_input">
+                            <div class="form-group">
                                 <label for="details">Details</label>
-                                <input type="text" name="details" id="details" placeholder="Enter Details">
+                                <input type="text" class="form-control" name="details" id="details" placeholder="Enter Details">
                             </div>
                            
                         
