--- a/resumebuilder/template/resume_data/education.html
+++ b/resumebuilder/template/resume_data/education.html
@@ -27,29 +27,29 @@
                     <form action="" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="inputs">
-                            <div class="label_input">
+                            <div class="form-group">
                                 <label for="school_name">Institute Name</label>
-                                <input type="text" name="school_name" id="school_name" placeholder="School NAme">
+                                <input type="text" class="form-control" name="school_name" id="school_name" placeholder="School NAme">
                             </div>
-                            <div class="label_input">
+                            <div class="form-group">
                                 <label for="subject">Subject Name</label>
-                                <input type="text" name="subject" id="subject" placeholder="Enter Subject">
+                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Enter Subject">
                             </div>
-                            <div class="label_input">
+                            <div class="form-group">
                                 <label for="start_date">Start Date</label>
-                                <input type="date" name="start_date" id="start_date">
+                                <input type="date" class="form-control" name="start_date" id="start_date">
                             </div>
-                            <div class="label_input">
+                            <div class="form-group">
                                 <label for="end_date">End Date</label>
-                                <input type="date" name="end_date" id="end_date">
+                                <input type="date" class="form-control" name="end_date" id="end_date">
                             </div>
-                            <div class="label_input">
+                            <div class="form-check">
                                 <label for="still_here">Still Here?</label>
                                 <input type="checkbox" name="still_here" id="still_here">
                             </div>
-                            <div class="label_input">
+                            <div class="form-group">
                                 <label for="cgpa">CGPA</label>
-                                <input type="text" name="cgpa" id="cgpa" placeholder="Enter Cgpa">
+                                <input type="text" class="form-control" name="cgpa" id="cgpa" placeholder="Enter Cgpa">
                             </div>
                             <input type="submit" value="Submit">
                             <input type="reset" value="Reset">
